--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "mockery/mockery": "^1.6",
         "nunomaduro/collision": "^8.0",
         "phpunit/phpunit": "^11.0.1",
+        "revolution/laravel-vercel-installer": "^1.2",
         "spatie/laravel-ignition": "^2.4"
     },
     "autoload": {
