Vercel にデプロイ

--- a/vercel.json
+++ b/vercel.json
@@ -16,6 +16,7 @@
         "APP_ENV": "production",
         "APP_DEBUG": "true",
         "APP_URL": "https://yourprojectdomain.com",
+        "APP_KEY": "base64:vCSTLHNs36XYDLJyJu6FKEoM/gBDN9QYEsG6jEUMqs4=",
         "APP_CONFIG_CACHE": "/tmp/config.php",
         "APP_EVENTS_CACHE": "/tmp/events.php",
         "APP_PACKAGES_CACHE": "/tmp/packages.php",
