--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,15 @@
 {
     "version": 2,
-    "framework": null,
-    "functions": {
-        "api/index.php": {
-            "runtime": "vercel-php@0.6.0"
+    "builds": [
+        {
+            "src": "api/index.php",
+            "use": "vercel-php@0.5.2"
+        },
+        {
+            "src": "public/**",
+            "use": "vercel-php@0.5.2"
         }
-    },
+    ],
     "routes": [
         {
             "src": "/(.*)",
@@ -13,18 +17,17 @@
         }
     ],
     "env": {
-        "APP_ENV": "production",
-        "APP_DEBUG": "true",
-        "APP_URL": "https://yourprojectdomain.com",
-        "APP_KEY": "base64:vCSTLHNs36XYDLJyJu6FKEoM/gBDN9QYEsG6jEUMqs4=",
+        "APP_NAME": "Laravel Vercel",
+        "APP_DEBUG": "false",
         "APP_CONFIG_CACHE": "/tmp/config.php",
         "APP_EVENTS_CACHE": "/tmp/events.php",
         "APP_PACKAGES_CACHE": "/tmp/packages.php",
         "APP_ROUTES_CACHE": "/tmp/routes.php",
         "APP_SERVICES_CACHE": "/tmp/services.php",
-        "VIEW_COMPILED_PATH": "/tmp",
         "CACHE_DRIVER": "array",
+        "CACHE_STORE": "array",
         "LOG_CHANNEL": "stderr",
-        "SESSION_DRIVER": "cookie"
+        "SESSION_DRIVER": "cookie",
+        "VIEW_COMPILED_PATH": "/tmp"
     }
 }
