--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,11 @@
 {
     "version": 2,
-    "builds": [
-        {
-            "src": "api/index.php",
-            "use": "vercel-php@0.5.2"
-        },
-        {
-            "src": "public/**",
-            "use": "vercel-php@0.5.2"
+    "framework": null,
+    "functions": {
+        "api/index.php": {
+            "runtime": "vercel-php@0.7.0"
         }
-    ],
+    },
     "routes": [
         {
             "src": "/(.*)",
