--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,6 @@ services:
     working_dir: /var/www
     volumes:
       - .:/var/www
-      - ./docker/nginx/nginx.conf:/etc/nginx/nginx.conf
     networks:
       - laravel
 
@@ -22,26 +21,11 @@ services:
       - "80:80"
     volumes:
       - .:/var/www
-      - ./docker/nginx/nginx.conf:/etc/nginx/nginx.conf
-    networks:
-      - laravel
-
-  db:
-    image: mysql:5.7
-    container_name: mysql_db
-    restart: unless-stopped
-    environment:
-      MYSQL_ROOT_PASSWORD: root
-      MYSQL_DATABASE: laravel
-      MYSQL_USER: laravel
-      MYSQL_PASSWORD: secret
-    volumes:
-      - db_data:/var/lib/mysql
+      - ./docker/nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+    depends_on:
+      - app
     networks:
       - laravel
 
 networks:
   laravel:
-
-volumes:
-  db_data:
