--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -1,3 +1,4 @@
+user  www-data;
 worker_processes  auto;
 
 error_log  /var/log/nginx/error.log warn;
@@ -33,7 +34,7 @@ http {
 
         location ~ \.php$ {
             include snippets/fastcgi-php.conf;
-            fastcgi_pass 127.0.0.1:9000;
+            fastcgi_pass app:9000;
             fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
             include fastcgi_params;
         }
