--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,9 @@ services:
       - laravel
 
   web:
-    image: nginx:alpine
+    build:
+      context: .
+      dockerfile: Dockerfile.nginx
     container_name: nginx_web
     restart: unless-stopped
     ports:
@@ -22,6 +24,7 @@ services:
     volumes:
       - .:/var/www
       - ./docker/nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./docker/nginx/fastcgi-php.conf:/etc/nginx/snippets/fastcgi-php.conf:ro
     depends_on:
       - app
     networks:
