--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -1,4 +1,3 @@
-user  www-data;
 worker_processes  auto;
 
 error_log  /var/log/nginx/error.log warn;
@@ -33,10 +32,7 @@ http {
         }
 
         location ~ \.php$ {
-            include snippets/fastcgi-php.conf;
-            fastcgi_pass app:9000;
-            fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-            include fastcgi_params;
+            include /etc/nginx/snippets/fastcgi-php.conf;  
         }
     }
 }
